src/objects/vlocity_ins__Interface_InsurancePolicy__c.object
<CustomObject>
    <description>Interface Object: Used to stage inbound insurance policy data for input into the Vlocity Insurance data model.</description>
    <fields>
        <fullName>vlocity_ins__AccumulationValue__c</fullName>
        <description>Accumulation Value</description>
        <label>Accumulation Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AnnualPremium__c</fullName>
        <description>Annual Premium</description>
        <label>Annual Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicationSubmitDate__c</fullName>
        <description>Application Submit Date</description>
        <label>Application Submit Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AutomaticRebalancing__c</fullName>
        <description>Automatic Rebalancing</description>
        <label>Automatic Rebalancing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingMethod__c</fullName>
        <description>Billing Method</description>
        <label>Billing Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CashSurrenderValue__c</fullName>
        <description>Cash Surrender Value</description>
        <label>Cash Surrender Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CashValue__c</fullName>
        <description>Cash Value</description>
        <label>Cash Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractDeathBenefit__c</fullName>
        <description>Contract Death Benefit</description>
        <label>Contract Death Benefit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractLivingBenefit__c</fullName>
        <description>Contract Living Benefit</description>
        <label>Contract Living Benefit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CostBasis__c</fullName>
        <description>Cost Basis</description>
        <label>Cost Basis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRBundleName__c</fullName>
        <label>DRBundleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRError__c</fullName>
        <description>Full error when processing.</description>
        <label>DR Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRProgressData__c</fullName>
        <description>JSON of current progress processing item if using bulk processing methods</description>
        <label>DR Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRStatus__c</fullName>
        <description>Status after processing DR map.</description>
        <label>DR Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DeathBenefit__c</fullName>
        <description>Death Benefit</description>
        <label>Death Benefit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveDate__c</fullName>
        <description>Effective Date</description>
        <label>Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpirationDate__c</fullName>
        <description>Expiration Date</description>
        <label>Expiration Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FaceAmount__c</fullName>
        <description>Face Amount</description>
        <label>Face Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GuaranteedDeathBenefit__c</fullName>
        <description>Guaranteed Death Benefit</description>
        <label>Guaranteed Death Benefit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InceptionDate__c</fullName>
        <description>Inception Date</description>
        <label>Inception Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Insurer__c</fullName>
        <description>Insurer</description>
        <label>Insurer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpenClaimCount__c</fullName>
        <description>Open Claim Count</description>
        <label>Open Claim Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyJurisdiction__c</fullName>
        <description>Policy Jurisdiction</description>
        <label>Policy Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyNumber__c</fullName>
        <description>Policy Number</description>
        <label>Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyStatus__c</fullName>
        <description>Policy Status</description>
        <label>Policy Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyType__c</fullName>
        <description>Policy Type</description>
        <label>Policy Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyholderAccountId__c</fullName>
        <description>Policy Holder Account Id</description>
        <label>Policy Holder Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QualifiedType__c</fullName>
        <description>Qualified Type</description>
        <label>Qualified Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordType__c</fullName>
        <description>Record Type</description>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedPartyBeneficiaryPercentage__c</fullName>
        <description>Related Party Beneficiary Percentage</description>
        <label>Related Party Beneficiary Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedPartyCommissionPercentage__c</fullName>
        <description>Related Party Commission Percentage</description>
        <label>Related Party Commission Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedPartyId__c</fullName>
        <description>Related Party Id</description>
        <label>Related Party Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedPartyName__c</fullName>
        <description>Related Party Name</description>
        <label>Related Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedPartyPercentage__c</fullName>
        <description>Related Party Percentage</description>
        <label>Related Party Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedPartyRelationshipToInsured__c</fullName>
        <description>Related Party Relationship To Insured</description>
        <label>Related Party Relationship To Insured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedPartyRole__c</fullName>
        <description>Related Party Role</description>
        <label>Related Party Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Term__c</fullName>
        <description>Term</description>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPremiumForTerm__c</fullName>
        <description>Total Premium For Term</description>
        <label>Total Premium For Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Interface Insurance Policy</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__PolicyNumber__c</columns>
        <columns>vlocity_ins__PolicyType__c</columns>
        <columns>vlocity_ins__DRBundleName__c</columns>
        <columns>vlocity_ins__DRStatus__c</columns>
        <columns>vlocity_ins__DRProgressData__c</columns>
        <columns>vlocity_ins__DRError__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Interface Insurance Policy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interface Insurance Policy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>